--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "@types/tooltipster": "^0.0.35",
     "@types/ws": "^8.5.10",
     "argon2": "^0.31.2",
+    "aws-sdk": "^2.1545.0",
     "bufferutil": "^4.0.8",
     "dotenv": "^16.4.1",
     "drizzle-orm": "^0.29.3",
@@ -55,7 +56,6 @@
     "grunt": "^1.6.1",
     "grunt-contrib-concat": "^2.1.0",
     "grunt-contrib-cssmin": "^5.0.0",
-    "grunt-criticalcss": "^2.1.0",
     "http-status-codes": "^2.3.0",
     "husky": "^9.0.10",
     "immer": "^10.0.3",
@@ -75,6 +75,8 @@
     "linkify-html": "^4.1.3",
     "linkifyjs": "^4.1.3",
     "lodash": "^4.17.21",
+    "mock-aws-s3": "^4.0.2",
+    "nock": "^13.5.0",
     "pino": "^8.18.0",
     "pino-pretty": "^10.3.1",
     "postgres": "^3.4.3",
